Actions
Bug #9715
closedlibstand: gzipfs unused variable
Start date:
2018-08-08
Due date:
% Done:
100%
Estimated time:
Difficulty:
Bite-size
Tags:
Gerrit CR:
Description
Revealed issue...
/code/illumos-gate/usr/src/boot/lib/libstand/gzipfs.c:328:19: error: unused variable 'res' [-Werror=unused-variable] int result, res; ^~~ cc1: all warnings being treated as errors
Updated by Electric Monk almost 4 years ago
- Status changed from In Progress to Closed
- % Done changed from 90 to 100
git commit a942f1f5f0eafb4e2a9cf5d6cff385b7830676e6
commit a942f1f5f0eafb4e2a9cf5d6cff385b7830676e6 Author: Toomas Soome <tsoome@me.com> Date: 2018-08-09T15:06:46.000Z 9715 libstand: gzipfs unused variable Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Dan McDonald <danmcd@joyent.com>
Actions