9715 libstand: gzipfs unused variable Reviewed by: Jason King <jason.king@joyent.com> Reviewed by: Yuri Pankov <yuripv@yuripv.net> Approved by: Dan McDonald <danmcd@joyent.com>